--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ body {
   overflow: hidden;
 }
 
+a{
+  text-decoration: none;
+  font-weight: 900;
+  color: white;
+}
+
 *{
   font-family: "SF Compact Text", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
